Issue: #FT-3107 Component: Changes: 1. fix Select Data Type width too narrow issue in Associate Records modal.

--- a/TripfinderWeb/TripfinderWeb/Global/Css/detailView.less
+++ b/TripfinderWeb/TripfinderWeb/Global/Css/detailView.less
@@ -1437,6 +1437,22 @@
     max-width: 100%;
 }
 
+.general-switch-grid-menu.tf-contextmenu-white {
+	width: 195px;
+
+	ul {
+		.menu-item {
+			line-height: 28px;
+			height: 35px;
+			padding: 6px 8px;
+
+			&:hover {
+				background-color: lightgray !important;
+			}
+		}
+	}
+}
+
 .tf-contextmenu-white {
     .dropdown-menu-template;
 
